# lilin

./: .gitmodules  README.md
candle-tutorial/: Cargo.toml  justfile
candle-tutorial/src/: lib.rs
whisper-candle/: .gitignore  Cargo.toml
whisper-candle/src/: audio.rs  cli.rs  decoder.rs  decoder_model.rs  device.rs  lib.rs  multilang.rs  util.rs
