[package]
name = "whisper-candle"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
clap = { version = "4.5.53", features = ["derive"] }
hf-hub = "0.4.3"
tokenizers = "0.22.1"
rand = "0.9.2"
tracing = "0.1.43"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.22"
serde_json = "1.0.145"
serde = "1.0.228"
byteorder = "1.5.0"
symphonia = { version = "0.5.3", features = ["all"] }
